// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.55e6e9a872bcc7d4b226.js.br",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.3d33e8cae1a5b505b55e.js.br",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.br",
    3564,
    {
      "compressed": true,
      "immutable": true,
      "size": 3564,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    378,
    {
      "compressed": true,
      "immutable": true,
      "size": 378,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    124,
    {
      "compressed": true,
      "immutable": true,
      "size": 124,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4075,
    {
      "compressed": true,
      "immutable": true,
      "size": 4075,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    372,
    {
      "compressed": true,
      "immutable": true,
      "size": 372,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    118,
    {
      "compressed": true,
      "immutable": true,
      "size": 118,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4069,
    {
      "compressed": true,
      "immutable": true,
      "size": 4069,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `[]`;
